Add Changes in index.html

--- a/Index.html
+++ b/Index.html
@@ -17,3 +17,14 @@
     <tbody id="book-list"></tbody>
             </thead>
         </table>
+        <form id="Book-form">
+            <input type="text" id="title" placeholder="Title">
+            <p></p>
+            <input type="text" id="author" placeholder="Author">
+            <p></p>
+            <button type="submit" id="Add-Book">Add</button>
+            </form>
+        </head> 
+        <script src="./main.js"></script>
+        </body>
+        </html>
