--- a/Index.html
+++ b/Index.html
@@ -23,7 +23,9 @@
     <tbody id="book-list"></tbody>
             </thead>
         </table>
+        <hr class="separator">
         <form id="Book-form">
+            <h1>Add a Book</h1>
             <input type="text" id="title" placeholder="Title"><br>
             <input type="text" id="author" placeholder="Author"><br>
             <button type="submit" id="Add-Book">Add</button>
