--- a/Index.html
+++ b/Index.html
@@ -12,14 +12,7 @@
 </html>
     <title>Awesome Book</title>
     <body>
-        <nav class="navbar">
-            <h1 class="nav-title" >Awesome Books</h1>
-            <ul class="nav-ul">
-                <li id="list"><a href="#" class="line">List</a></li>
-                <li id="addNew"><a href="#"class="line">Add New</a></li>
-                <li id="contact"><a href="#">Contact</a></li>
-            </ul>
-        </nav>
+        <h1 class="main-title">Awesome Books</h1>
         <table class="table">
             <thead>
                 <tr>
@@ -30,17 +23,13 @@
     <tbody id="book-list"></tbody>
             </thead>
         </table>
-        
+        <hr class="separator">
         <form id="Book-form">
-            <h1>Add a New Book</h1>
+            <h1>Add a Book</h1>
             <input type="text" id="title" placeholder="Title"><br>
             <input type="text" id="author" placeholder="Author"><br>
             <button type="submit" id="Add-Book">Add</button>
             </form>
-            <footer>
-                <h1 class="footer">Copyright</h1>
-            </footer>
         <script src="./main.js"></script>
         </body>
         </html>
-
