Add changes in index.html

--- a/Index.html
+++ b/Index.html
@@ -57,7 +57,7 @@
               </div>
 
               <footer>
-                <h1 class="footer">Copyright</h1>
+                <h1 class="footer">© 2017-2022 microverse.org</h1>
             </footer>
         <script src="./main.js"></script>
         </body>
